bottom navigation added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hii_community">Hii community!</string>
     <string name="coffie_friendship_business">Coffee | Friendship | Business</string>
     <string name="invite">+ INVITE</string>
+    <string name="explore">explore</string>
 </resources>
